# data-orchestrator

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  README.md  plan.md  pyproject.toml
data_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
examples/01_minimal/: main.py
examples/01_minimal/connectors/: demo.py
examples/01_minimal/pipelines/: demo.yaml
examples/02_shopify_to_postgres/: README.md
examples/02_shopify_to_postgres/connectors/: shopify.py
examples/02_shopify_to_postgres/pipelines/: daily_sync.yaml
examples/03_parallel_tasks/: README.md  main.py
examples/04_custom_action/: main.py
examples/ad_monitor/: README.md
examples/shopify_daily/: main.py
orchestrator/: __init__.py  cli.py  exceptions.py  orchestrator.db  streamlit_thread.py
orchestrator/config/: __init__.py  loader.py  settings.py  template.py
orchestrator/connectors/: __init__.py  base.py  loader.py  registry.py
orchestrator/core/: __init__.py  api.py  pipeline.py  runner.py  schedule.py  scheduler.py  task.py
orchestrator/log/: __init__.py  models.py  reader.py  writer.py
orchestrator/notify/: __init__.py  base.py  manager.py
orchestrator/ui/: __init__.py  app.py
tests/: conftest.py  test_cli.py  test_smoke.py
tests/config/: test_loader.py
tests/connectors/: test_builtin_connectors.py  test_custom_action.py  test_registry.py
tests/core/: test_pipeline_runner.py  test_scheduler.py  test_task_runner.py
tests/integration/: test_e2e.py
tests/log/: test_log_writer.py
tests/notify/: test_notify_manager.py
(+13 files in other folders)
